<resources>
    <string name="app_name">GoodBetterVege</string>
    <string name="about_link">
        <a href='http://google.com'>http://google.com</a>
    </string>
    <string name="more_link">
        <a href="http://youtu.be/zHW5LRaRVUQ">http://youtu.be/zHW5LRaRVUQ</a>
    </string>
    <string name="title_activity_about">Who are we?</string>
    <string name="title_karo">Karo</string>
    <string name="title_zosia">Zosia</string>
    <string name="title_aga">Aga</string>

    <string name="about_karo">Karo jest super. Lubi podróże i kaktusy. Kolekcjonuje naklejki i pisze listy. </string>
    <string name="about_zosia">Zosia jest ekstra. Lubi taniec i sklepy papiernicze. Jej ulubione jedzenie to pierogi.</string>
    <string name="about_aga">Agusia jest odlotowa. Lubi programowanie i zdrowe jedzenie. Jej ulubiony pisarz to Herbert(?).</string>

    <string name="have_you">Have you eaten meat today?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="about_us">About us</string>
    <string name="more">More</string>
</resources>
