<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark"
        tools:context="com.app.miszkur.goodbettervege.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:fontFamily="casual"
        android:text="@string/have_you"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="36sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Button
            android:text="@string/yes"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_tak"
            android:layout_marginTop="24dp" android:layout_marginLeft="79dp" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:fontFamily="casual" android:textSize="24sp" android:textColorHighlight="#ffffff"
            android:textColor="#ffffff"/>
    <Button
            android:text="@string/no"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_nie"
            android:layout_marginRight="8dp" app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintLeft_toRightOf="@+id/button_tak" android:layout_marginLeft="8dp"
            android:fontFamily="casual" android:textSize="24sp" android:textColor="#ffffff"/>
    <ImageView
            android:layout_width="410dp"
            android:layout_height="387dp" app:srcCompat="@drawable/krowa"
            android:id="@+id/krowa"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginTop="0dp"
            app:layout_constraintVertical_bias="0.0" android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/button_nie"/>
    <Button
            android:background="@android:color/transparent"
            android:layout_width="260dp"
            android:layout_height="229dp"
            app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="@+id/krowa"
            android:id="@+id/reset" android:layout_marginRight="0dp" android:layout_marginLeft="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/krowa" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/krowa" android:layout_marginTop="8dp"
            android:visibility="visible" android:fontFamily="casual"/>
    <Button
            android:background="@android:color/transparent"
            android:text="@string/about_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_us"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginLeft="32dp" app:layout_constraintLeft_toLeftOf="parent"
            android:fontFamily="casual" android:textSize="18sp" android:textColor="#ffffff"/>
    <Button
            android:background="@android:color/transparent"
            android:text="@string/more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/more"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="8dp"
            android:layout_marginRight="32dp" app:layout_constraintRight_toRightOf="parent"
            android:fontFamily="casual" android:textSize="18sp" android:textColor="#ffffff"/>
</android.support.constraint.ConstraintLayout>
